# todotui

./: .gitignore  CMakeLists.txt  Makefile  README.md
.cache/clangd/index/: Task.cpp.0F9C7BD3F41BA387.idx  Task.h.E5B78045ADD4B677.idx  TaskFileHandler.cpp.0DC384F82488BB49.idx  TaskFileHandler.h.66D8161BD57FD468.idx  TaskManager.cpp.2432A31617B4F42B.idx  TaskManager.h.9E2786178D6EC6F5.idx  main.cpp.82D513225EA519C5.idx
include/: Task.h  TaskFileHandler.h  TaskManager.h  TaskRepository.h  TaskUI.h
src/: Task.cpp  Task.h  TaskFileHandler.cpp  TaskManager.cpp  TaskRepository.cpp  TaskUI.cpp  main.cpp
